# nisound

./: Cargo.toml  flake.nix
src/: audio.rs  config.rs  main.rs  output_of_glob.md  ui.rs
