[package]
name = "nisound"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["serde"] }
rodio = "0.18.0"
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14.1"
walkdir = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
